--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,21 @@
+html {
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    padding: 0;
+}
+
+body {
+    height: 100%;
+    width: calc(100% - 64);
+    margin: 0;
+    padding: 100px;
+}
+
 .container {
-  border-top: 1px solid red;
+    border: 1px solid red;
 }
 
 .item {
-  background-color: #EEEEEE;
+    background-color: #EEEEEE;
 }
